# loxbudget

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENT_PROGRESS.md  AGENT_START_HERE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TODO.md  V0.1_SCOPE.md  WORKLOG_V0.1.md  WORKLOG_V0.2.md  WORKLOG_V0.3.md  WORKLOG_V1.0.md  WORKLOG_V1.1.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sbom.yml
adapters/loxguard/: loxbudget_loxguard_adapter.c  loxbudget_loxguard_adapter.h
adapters/microbus/: loxbudget_microbus_adapter.c  loxbudget_microbus_adapter.h
adapters/microconf/: loxbudget_microconf_adapter.c  loxbudget_microconf_adapter.h
adapters/microhealth/: loxbudget_microhealth_adapter.c  loxbudget_microhealth_adapter.h
adapters/microlog/: loxbudget_microlog_adapter.c  loxbudget_microlog_adapter.h
adapters/nvlog/: loxbudget_nvlog_adapter.c  loxbudget_nvlog_adapter.h
benchmarks/: bench_check_overhead.c  v1.0_real_hardware.md  v1.1_cycles.md  v1.1_footprint.md
benchmarks/cortexm_wcet_stack/: README.md  bench_cycles_dwt.c  bench_cycles_dwt.h  bench_wcet_check.c
ci/: footprint_budget.yaml
cmake/: loxbudgetConfig.cmake.in
docs/: adapters.md  api.md  calibration.md  causality.md  design_rationale.md  faq.md  getting_started.md  handoff.md  index.md  misra.md  porting.md
examples/01_bare_metal_minimal/: main.c
examples/02_freertos_mqtt_storm/: README.md  main.c
examples/03_esp_idf_flash_budget/: README.md  main.c
examples/esp32_arduino_loxbudget/: README.md  esp32_arduino_loxbudget.ino  loxbudget_impl.c
include/: loxbudget.h
releases/: v1.0.0-announcement.md  v1.0.0-rc1.md  v1.0.0.md
src/: loxbudget.c  loxbudget_audit.c  loxbudget_calibration.c  loxbudget_causality.c  loxbudget_core.c  loxbudget_hal.c  loxbudget_strings.c
tests/: Makefile  scenario_runner.c  single_header_impl.c  test_backward_compat_v0_3.c  test_calibration_disabled.c  test_causality.c  test_determinism.c  test_header_compiles.c  test_loxguard_adapter.c  test_microbus_adapter.c  test_microconf_adapter.c  test_microhealth_adapter.c  test_microlog_adapter.c  test_nvlog_adapter.c  test_v0_1.c
tests/fuzz/: fuzz_decision_inputs.c  fuzz_rate_windows.c
tests/integration/: test_flash_burnout.c  test_mqtt_storm.c  test_ota_blocked.c
tests/scenarios/: 01_simple_cascade.txt  02_rare_only_critical.txt  03_cycle_rejected.txt  04_capacity_full.txt  05_depth_limit.txt  06_diamond_cascade.txt
tools/: amalgamate.py  calibration_report.py  check_banned_symbols.sh  footprint_check.sh  scenario_replay.py  stack_usage_report.py
